# startup

./: .gitignore  archives.html  authors.html  authors.yaml  categories.html  how-to-set-up-hire-and-scale-a-growth-strategy-and-team.html  index.html  khoi-nghiep-tinh-gon.html  lam-sao-de-co-mot-y-tuong-startup-dang-tien-vn.html  my-first-review.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  tags.html  tasks.py  using-async-and-await-en.html
.github/workflows/: pelican.yml
author/: albert.html  anu-hariharan.html  doa.html  van-dung.html
category/: misc.html  startup.html
content/: growth-team.rst  keyboard-review.rst  lean-startup.rst  startup.md  startup.rst  super.rst
content/extra/: CNAME
plugins/: simple_footnotes.py
plugins/author/: __init__.py
tag/: growth-strategy.html  hire.html  school.html  startup.html
theme/css/: admonition.css  image.css  main.css  typography.css
themes/singularity/static/css/: index.css  main.css
themes/singularity/static/javascript/: main.js
themes/singularity/templates/: article.html  base.html  index.html  page.html
